# telewrapper

./: .env.example  .gitignore  README.md  config.yaml.example  long_test.py  pyproject.toml  test_script.py
.github/workflows/: publish.yml
src/telewrapper/: bot.py  cli.py  config.py  logs.py  process.py  system_stats.py
test/: test.py
